--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "async-retry": "^1.3.3",
     "axios": "^0.24.0",
     "axios-rate-limit": "^1.3.0",
     "dotenv": "^10.0.0",
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "trezor-connect": "^8.2.12"
   }
 }
